--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
         "laminas/laminas-http": "^2.15.1",
         "laminas/laminas-json": "^2.6.1 || ^3.0",
         "laminas/laminas-mvc": "^2.7.15 || ^3.0.4",
-        "laminas/laminas-view": "^2.8.1",
-        "laminas/laminas-zendframework-bridge": "^1.0"
+        "laminas/laminas-view": "^2.8.1"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.3.0",
